Added reset cpabilities

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <body>
         <h3>whatup</h3>
 
-        <button type="button" id="startButton" class="btn-start btn btn-lg">Start
-        </button>
+        <button type="button" id="startButton" class="btn-start btn btn-lg">Start</button>
+        <button type="button" id="resetButton" class="btn-reset btn btn-lg">Reset</button>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/app.js" charset="utf-8"></script>
