Can send messages to individual clients

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h3>whatup</h3>
+        <h3 id="playerHeader" class="hdr-player">whatup</h3>
 
         <button type="button" id="startButton" class="btn-start btn btn-lg">Start</button>
         <button type="button" id="resetButton" class="btn-reset btn btn-lg">Reset</button>
