Creating tic-tac-toe board

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
         <button type="button" id="startButton" class="btn-start btn btn-lg">Start</button>
         <button type="button" id="resetButton" class="btn-reset btn btn-lg">Reset</button>
 
+        <table id="board" class="brd"></table>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/app.js" charset="utf-8"></script>
     </body>
