Complete game functionality complete

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,14 @@
 
     <body>
         <h3 id="playerHeader" class="hdr-player">whatup</h3>
+        <h3 id="turnHeader" class="hdr-turn">too early lol</h3>
 
         <button type="button" id="startButton" class="btn-start btn btn-lg">Start</button>
         <button type="button" id="resetButton" class="btn-reset btn btn-lg">Reset</button>
 
         <table id="board" class="brd"></table>
+
+        <h3 id="winnerHeader" class="hdr-winner">too early lol</h3>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/app.js" charset="utf-8"></script>
